(lang dune 3.8)
(name domain-local-await)
(version 1.0.1)
(generate_opam_files true)
(source (github ocaml-multicore/domain-local-await))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/domain-local-await")
(license "ISC")
(implicit_transitive_deps false)
(package (name domain-local-await)
 (synopsis "A scheduler independent blocking mechanism")
 (description "A low level mechanism intended for writing higher level libraries that need to block in a scheduler friendly manner.")
 (depends
  (ocaml (>= 4.12.0))
  (thread-table (>= 1.0.0))
  (alcotest (and (>= 1.7.0) :with-test))
  (mdx (and (>= 2.3.0) :with-test))
  (ocaml-version (and (>= 3.6.1) :with-test))
  (domain_shims (and (>= 0.1.0) :with-test))))
(using mdx 0.4)
