(lang dune 3.6)
(name iomux)
(version v0.3)
(generate_opam_files true)
(source
 (github haesbaert/ocaml-iomux))
(authors "Christiano Haesbaert")
(maintainers "Christiano Haesbaert")
(license ISC)
(documentation https://haesbaert.github.io/ocaml-iomux)

(package
 (name iomux)
 (synopsis "IO Multiplexer bindings")
 (description "Low level bindings for Unix IO Multiplexers (poll/ppoll/kevent/epoll)")
 (depends
   (ocaml (>= 4.08))
   dune
   dune-configurator
   (alcotest :with-test))
 (tags
  (io multiplexing poll ppoll epoll kevent kqueue)))
