(lang dune 3.3)
(name thread-table)
(version 1.0.0)
(generate_opam_files true)
(source (github ocaml-multicore/thread-table))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/thread-table")
(license "ISC")
(package (name thread-table)
 (synopsis "A lock-free thread-safe integer keyed hash table")
 (description "A minimalist lock-free thread-safe integer keyed hash table with zero synchronization overhead on lookups designed for associating thread specific state with threads within a domain.")
 (depends
  (ocaml (>= 4.08))
  (alcotest (and (>= 1.7.0) :with-test))))
